<resources>
    <string name="app_name">moviesinfnet</string>
    <string name="application_logo">Application logo</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="sign_in">Logar</string>
    <string name="create_account">Criar Conta</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="register">Registrar</string>
    <string name="have_account">Conta</string>
    <string name="ok">OK</string>
    <string name="empty_email">Email Vazio</string>
    <string name="too_short_passwd">Senha precisa ter no mínimo %d letras</string>
    <string name="diff_passwd">Senhas não batem</string>
    <string name="successfully_registered">Registrado!</string>
    <string name="something_went_wrong">Erro: %s</string>
    <string name="wrong_email_or_passwd">Email/senha errados.</string>
    <string name="logged_in_correctly">Logado!</string>
    <string name="search">Buscar:</string>
    <string name="towatch">Para Assistir</string>
    <string name="watched">Assistidos</string>
    <string name="log_out">Log out</string>
    <string name="trending_now">Pesquisar filme:</string>
    <string name="watched_fragment_title">Filmes Assistidos</string>
    <string name="movie_poster">Poster</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="log_out_confirmation">log out?</string>
    <string name="sign_out">Sign out</string>
    <string name="cancel">Cancelar</string>
    <string name="popularity_format">Popularidade: %.1f</string>
    <string name="vote_format">Votos: %d</string>
    <string name="votes_icon">Votos icon</string>
    <string name="movie_added_towatch">"adicionado a lista para assistir "</string>
    <string name="movie_added_to_watched">adicionado aos assistidos</string>
    <string name="unwatched">Desmarcar</string>
    <string name="remove_towatch">Remover</string>
    <string name="no_result_icon">No result icon</string>
    <string name="empty_result_search">Nenhum resultado encontrado</string>
    <string name="empty_result_towatch">Sem filmes ainda</string>
</resources>